--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,3 +6,12 @@ PROJECT TEA COZY
   margin: 0;
   padding: 0;
 }
+
+body {
+  font-family: Helvetica;
+  font-size: 22px;
+  color: seashell;
+  background-color: black;
+  opacity: 0.9;
+  text-align: center;
+}
