--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,3 +15,77 @@ body {
   opacity: 0.9;
   text-align: center;
 }
+
+/* HEADER */
+header {
+  width: 100%;
+  height: 69px;
+  position: fixed;
+  background-color: black;
+  border-bottom: 1px solid seashell;
+  display: flex;
+  align-items: center;
+  z-index: 10;
+}
+
+/* HEADER LOGO */
+.logo {
+  flex-grow: 1;
+  text-align: left;
+  padding-left: 10px;
+}
+
+.logo img {
+  height: 50px;
+}
+
+/* HEADER NAVIGATION */
+nav {
+  padding-right: 10px;
+}
+
+nav ul {
+}
+
+nav li {
+  display: inline-block;
+  list-style: none;
+  padding-left: 20px;
+}
+
+nav li a:link,
+nav li a:visited {
+  color: seashell;
+}
+
+nav li a:hover {
+  color: lightblue;
+}
+
+nav li a:active {
+  color: seashell;
+}
+
+/* SECTION MISSION */
+section.mission {
+  max-width: 1200px;
+  height: 700px;
+  margin: 0 auto;
+  position: relative;
+  padding-top: 69px;
+  background: url('../img/img-mission-background.jpg') top center no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#mission {
+  background-color: black;
+  padding: 10px 0;
+  width: 100%;
+}
+
+#mission h2 {
+  padding-bottom: 20px;
+}
